# descope-ai

./: .gitignore  CHANGELOG.md  README.md  RELEASE.md  pyproject.toml  release-please-config.json  requirements.txt
.github/: release-drafter.yml
.github/workflows/: ci.yml  publish.yml  release-notes.yml  release-please.yml  release.yml  test.yml
examples/: README.md  fastmcp_example.py
examples/basic_usage/: README.md  basic_usage.py  pyproject.toml  requirements.txt
examples/fastmcp_auth/: README.md  fastmcp_descope_auth_example.py
examples/fastmcp_calendar/: README.md
examples/organizational_token/: README.md  fetch_tenant_token_example.py  pyproject.toml  requirements.txt
python/: README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
python/examples/: README.md  fastmcp_descope_auth_example.py
python/examples/fastmcp_auth/: pyproject.toml  requirements.txt
python/examples/fastmcp_calendar/: README.md  fastmcp_example.py  pyproject.toml  requirements.txt
python/examples/tenant_token/: README.md  fetch_tenant_token_example.py  pyproject.toml  requirements.txt
python/src/descope_mcp/: __init__.py  client.py  connections.py  descope_mcp.py  server.py  session.py  types.py
python/src/mcp_descope/: __init__.py  client.py  connections.py  descope_mcp.py  server.py  session.py
python/tests/: README.md  conftest.py  test_basic.py  test_fastmcp2.py  test_functions.py  test_import_compatibility.py  test_mcpserver.py
src/mcp_descope/: __init__.py  connections.py  descope_mcp.py  session.py  types.py
tests/: conftest.py  test_fastmcp3.py  test_functions.py  test_import_compatibility.py  test_mcpserver.py
