[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-descope"
version = "0.1.0"
description = "MCP SDK for Descope authentication"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "MCP Descope Team", email = "team@example.com"}
]
keywords = ["mcp", "descope", "authentication", "sdk"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp>=1.0.0",
    "descope>=1.0.0",
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/your-org/mcp-descope"
Repository = "https://github.com/your-org/mcp-descope"
Issues = "https://github.com/your-org/mcp-descope/issues"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 