[project]
name = "mcp-descope-example-organizational-token"
version = "0.1.0"
description = "Organizational/tenant token example for MCP Descope SDK"
requires-python = ">=3.8"
dependencies = [
    "mcp>=1.0.0",
    "descope>=1.0.0",
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
