[project]
name = "mcp-descope-example-fastmcp-calendar"
version = "0.1.0"
description = "FastMCP Calendar example with Descope authentication"
requires-python = ">=3.8"
dependencies = [
    "mcp>=1.0.0",
    "fastmcp>=2.0.0",
    "descope>=1.0.0",
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0",
    "httpx>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
