[project]
name = "descope-mcp-example-fastmcp-calendar"
version = "0.1.0"
description = "FastMCP Calendar example with Descope authentication"
requires-python = ">=3.10"
dependencies = [
    "descope-mcp>=0.1.0",
    "mcp>=1.0.0",
    "fastmcp>=2.0.0",
    "descope>=1.0.0",
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0",
    "httpx>=0.24.0",
]

[tool.uv.sources]
descope-mcp = { path = "../../", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
